ex. up to condition branch

--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -135,44 +135,85 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assign
 
 #### {{< fa maximize >}} Condition Branch
 
-needs edit
-
-For example, if you wanted your models where the field `GenAI Model` is set to `true` to undergo a special legal approval process:
-
-- First, you'd set up a Condition Branch path to look for instances where `GenAI Model` is set to `true`.
-- Then, you would add an Approval step[^14] that requests a review of the model from the User Roles — `Legal Team`.
-- Finally, configure the `default` path to bypass this special approval. 
+In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^14] approval process:[^15]
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-50-ns}
-![CONDITION BRANCH step configuration with condition of GenAI Model = `true`](configure-condition-branch.png){fig-alt="A screenshot showing a CONDITION BRANCH step configuration with condition of GenAI Model = `true`" .screenshot group="condition"}
+::: {.w-40-ns}
 
+![Example {{< fa maximize >}} Condition Branch configuration modal](configure_condition-branch.png){fig-alt="A screenshot showing an example Condition Branch configuration modal" .screenshot group="condition-branch"}
 :::
 
 ::: {.w-50-ns}
-![Legal Team Approval step configuration](legal-team-approval.png){fig-alt="Screenshot showing the Legal Team Approval step configuration" .screenshot group="condition"}
+
+![Example {{< fa maximize >}} Condition Branch step](example_condition-branch.png){fig-alt="A screenshot showing an example Condition Branch step" .screenshot group="condition-branch"}
 
 :::
 
 ::::
 
-::: {.column-margin}
-![Example Condition Branch where GenAI models require special approval from the User Roles — Legal Team](example-condition-branch.png){fig-alt="A screenshot showing an example Condition Branch where GenAI models require special approval from the User Roles — Legal Team" .screenshot group="condition"}
-
-:::
-
 #### {{< fa clock >}} Wait
 
 wip
+
+In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-60-ns}
+
+![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
+:::
+
+::: {.w-40-ns}
+
+![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+
+:::
+
+::::
 
 #### {{< fa arrow-right-arrow-left >}} Run Workflow
 
 wip
 
+In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-60-ns}
+
+![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
+:::
+
+::: {.w-40-ns}
+
+![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+
+:::
+
+::::
+
 #### {{< fa circle-stop >}} End
 
 wip
+
+In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-60-ns}
+
+![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
+:::
+
+::: {.w-40-ns}
+
+![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+
+:::
+
+::::
 
 
 <!-- FOOTNOTES -->
@@ -225,3 +266,7 @@ wip
 [^12]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
 [^13]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^14]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+
+[^15]: [{{< fa users >}} Approval](#approval)
