--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -131,7 +131,7 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assign
 
 ::::
 
-![Example {{< fa users >}} Approval message](example_approval-message.png){fig-alt="A screenshot showing an example Approval message" .screenshot group="approval"}
+![Example {{< fa users >}} Approval message](example_approval-message.png){fig-alt="A screenshot showing an example Approval message" width=90% .screenshot group="approval"}
 
 #### {{< fa maximize >}} Condition Branch
 
@@ -152,9 +152,9 @@ In this example, models where the field [genai model]{.smallcaps} is set to true
 
 ::::
 
-#### {{< fa clock >}} Wait
+#### {{< fa clock >}} Wait*
 
-wip
+wip NOT DONE
 
 In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
 
@@ -162,12 +162,12 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assign
 
 ::: {.w-60-ns}
 
-![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
+![Example {{< fa clock >}} Wait configuration modal](configure_wait.png){fig-alt="A screenshot showing an example Wait configuration modal" .screenshot group="wait"}
 :::
 
 ::: {.w-40-ns}
 
-![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+![Example {{< fa clock >}} Wait step](example_wait.png){fig-alt="A screenshot showing an example Wait step" .screenshot group="wait"}
 
 :::
 
@@ -175,20 +175,18 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assign
 
 #### {{< fa arrow-right-arrow-left >}} Run Workflow
 
-wip
-
-In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
+In this example, the current workflow initiates another workflow called `On model validation`:
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
 
-![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
+![Example {{< fa arrow-right-arrow-left >}} Run Workflow configuration modal](configure_run-workflow.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="run-workflow"}
 :::
 
 ::: {.w-40-ns}
 
-![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+![Example {{< fa arrow-right-arrow-left >}} Run Workflow step](example_run-workflow.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="run-workflow"}
 
 :::
 
@@ -196,20 +194,16 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assign
 
 #### {{< fa circle-stop >}} End
 
-wip
-
-In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
-
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
+In this example, the workflow is designated to stop after running an additional workflow called `On model validation`:
 
-![Example {{< fa users >}} Approval configuration modal](configure_approval.png){fig-alt="A screenshot showing an example Approval configuration modal" .screenshot group="approval"}
 :::
 
 ::: {.w-40-ns}
 
-![Example {{< fa users >}} Approval step](example_approval.png){fig-alt="A screenshot showing an example Approval step" .screenshot group="approval"}
+![Example {{< fa circle-stop >}} End step](example_end.png){fig-alt="A screenshot showing an example End step" .screenshot}
 
 :::
 
