--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -8,7 +8,7 @@ To initiate the beginning of your workflow:^[After you’ve [configured your wor
 
 1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
 
-1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the any **{{< fa circle >}}** on the first step of your workflow.
+1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the first step of your workflow.
 
 1. Continue with linking the rest your steps together.
 
@@ -20,14 +20,14 @@ Hover over a workflow step to view an animation of the steps connecting to and f
 
 To link subsequent steps together:
 
-1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to any **{{< fa circle >}}** on the subsequent step.
+1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
 
     You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
 1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End** step.
 
 
-##### Link approval steps*
+##### Link approval steps
 
 {{< fa users >}} Approval steps need to be subsequently linked to both a [Rejected]{.bubble .red .red-bg} and an [Approved]{.bubble .green .green-bg} {{< fa cube >}} Model Stage Change step:^[[Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd#workflow-step-types)]
 
