--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -65,7 +65,7 @@ To initiate the beginning of your workflow:
 
 1. Locate the [**Start**]{.bubble .green .green-bg} of your workflow.
 
-1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the any **{{< fa circle >}}** on the first step of your workflow.
+1. Drag from the **{{< fa circle >}}** at the bottom of [**Start**]{.bubble .green .green-bg} to the top **{{< fa circle >}}** on the first step of your workflow.
 
 1. Continue with linking the rest your steps together.
 
@@ -73,7 +73,7 @@ To initiate the beginning of your workflow:
 
 To link subsequent steps together:
 
-1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to any **{{< fa circle >}}** on the subsequent step.
+1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
 
     You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
