--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -152,15 +152,13 @@ In this example, models where the field [genai model]{.smallcaps} is set to true
 
 ::::
 
-#### {{< fa clock >}} Wait*
+#### {{< fa clock >}} Wait
 
-wip NOT DONE
-
-In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
+In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} datetime field:[^16]
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-60-ns}
+::: {.w-50-ns}
 
 ![Example {{< fa clock >}} Wait configuration modal](configure_wait.png){fig-alt="A screenshot showing an example Wait configuration modal" .screenshot group="wait"}
 :::
@@ -264,3 +262,5 @@ In this example, the workflow is designated to stop after running an additional 
 [^14]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
 [^15]: [{{< fa users >}} Approval](#approval)
+
+[^16]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
