quickstart: Model Validation (#750)
* WIP validation quickstart

* Validation quickstart draft

* Proofreading

* Quick edit to key concepts

* Edit

* More proofreading

* QuickStart casing fix

* removing future tenses

* common-assets > common-steps

* tabsets

* Update site/get-started/validator/quickstart-validator.qmd

Co-authored-by: Nik Richers <nik@validmind.ai>

* Update site/get-started/validator/quickstart-validator.qmd

Co-authored-by: Nik Richers <nik@validmind.ai>

* Tweak

* Fixing numbering

---------

Co-authored-by: Nik Richers <nik@validmind.ai>

--- a/site/get-started/administrator/quickstart-administrator.qmd
+++ b/site/get-started/administrator/quickstart-administrator.qmd
@@ -1,14 +1,14 @@
 ---
 title: "Quickstart — Setup & Administration [coming soon]{.smallercaps .pink}"
+subtitle: "10 minutes"
 date: last-modified
-page-layout: full
 ---
 
 Set up the foundational units for your organization within the {{< var validmind.platform >}}, prepare your organization for users, then grant access to your first user.
 
 <!-- BECK'S OUTLINE / NOTES -->
 
-<!-- {{< include /get-started/common-assets/_before-you-begin.qmd >}}
+<!-- {{< include /get-started/common-steps/_before-you-begin.qmd >}}
 
 ## Setting up your organization
 
