--- a/site/get-started/developer/quickstart-developer.qmd
+++ b/site/get-started/developer/quickstart-developer.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Quickstart — Model Development"
+subtitle: "15 minutes"
 date: last-modified
-page-layout: full
 listing:
   - id: whats-next
     type: grid
@@ -23,19 +23,19 @@ aliases:
 
 Register your first model, use the {{< var validmind.developer >}} to run tests and document a model, then review your generated model documentation within the {{< var validmind.platform >}}.
 
-{{< include /get-started/common-assets/_before-you-begin.qmd >}}
+{{< include /get-started/common-steps/_before-you-begin.qmd >}}
 
 ## Register your first model
 
 The first step to using {{< var vm.product >}} to develop models is to register them in your model inventory:
 
-{{< include /get-started/common-assets/_register-your-first-model.qmd >}}
+{{< include /get-started/common-steps/_register-your-first-model.qmd >}}
 
 ::: {.column-margin}
 ![Registration modal with the options filled out for the model development quickstart](developer-new-model.png){width=90% fig-alt="A screenshot showing the registration modal with the options filled out for the model development quickstart" .screenshot}
 :::
 
-{{< include /get-started/common-assets/_get-your-code-snippet.qmd >}}
+{{< include /get-started/common-steps/_get-your-code-snippet.qmd >}}
 
 ::: {.column-margin}
 ![{{< fa rocket >}} Getting Started page with a sample code snippet](developer-code-snippet.png){width=90% fig-alt="A screenshot showing the Getting Started page with a sample code snippet" .screenshot}
@@ -43,31 +43,36 @@ The first step to using {{< var vm.product >}} to develop models is to register 
 
 ## Using the {{< var validmind.developer >}}
 
-Next, let's set up the {{< var validmind.developer >}} in your developer environment of choice so we can use it to run and log tests, which will help automate the documentation of your models.
+Next, let's set up the {{< var validmind.developer >}} in your development environment of choice so we can use it to run and log tests, which helps automate the documentation of your models.
 
-Our companion notebook, **Quickstart for model documentation,**[^3] will walk you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running a full suite of documentation tests that will log the results to the {{< var validmind.platform >}}.
+Our companion notebook, **Quickstart for model documentation,**[^1] walks you through the steps of installing the {{< var vm.developer >}} in your environment, initializing the {{< var vm.developer >}} for use, and running a full suite of documentation tests that logs results to the {{< var validmind.platform >}}.
 
-{{< include /get-started/common-assets/_access-quickstart-notebook.qmd >}}
+{{< include /get-started/common-steps/_access-quickstart-notebook.qmd >}}
 
-<!-- NOT LIVE ON JUPYTERHUB YET, HASN'T BEEN UPDATED -->
 1. Open [Quickstart for model documentation]({{< var url.jupyterhub >}}/hub/user-redirect/lab/tree/quickstart/quickstart_model_documentation.ipynb) and [run the quickstart notebook](#run-the-quickstart-notebook).
 
-{{< include /get-started/common-assets/_download-notebooks.qmd >}}
+#### Download the notebooks
 
-1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+::: {.panel-tabset}
 
-{{< include /get-started/common-assets/_download-code-samples.qmd >}}
+{{< include /get-started/common-steps/_download-notebooks.qmd >}}
 
-1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your developer environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+1. After the cloning process is complete, open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your development environment and [run the quickstart notebook](#run-the-quickstart-notebook).
 
-{{< include /get-started/common-assets/_run-quickstart-notebook.qmd >}}
+{{< include /get-started/common-steps/_download-code-samples.qmd >}}
+
+1. Open `notebooks/quickstart/quickstart_model_documentation.ipynb` in your development environment and [run the quickstart notebook](#run-the-quickstart-notebook).
+
+:::
+
+{{< include /get-started/common-steps/_run-quickstart-notebook.qmd >}}
 
 ::: {.column-margin}
 **Example success message:**
 
 ```bash
-2024-10-08 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
-📊 Model: [ValidMind] Model development quickstart (ID: cmalgf3qi02ce199qm3rdkl46)
+2025-06-10 22:06:42,610 - INFO(validmind.api_client): 🎉 Connected to {{< var vm.product >}}!
+📊 Model: [ValidMind] Model development quickstart (ID: cmbpnxrv6012o0g9w5049nsct)
 📁 Document Type: model_documentation
 ```
 :::
@@ -80,33 +85,37 @@ After you successfully run the notebook, return to the {{< var validmind.platfor
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Locate or search for the model you registered for this quickstart and click on it to select it.[^4]
+2. Locate or search for the model you registered for this quickstart and click on it to select it.[^2]
 
-3. In the left sidebar that appears for the model, click **{{< fa book-open >}} Documentation**.
+3. In the left sidebar that appears for the model, click **{{< fa book-open >}} Documentation**:
 
-   - Your model's documentation is broken down into sections, defined by your documentation templates.[^5]
-   - Each section can be assigned a completion status,[^6] allowing you to track the progress of your documentation.
+   - Your model's documentation is broken down into sections, defined by your documentation templates.[^3]
+   - Each section can be assigned a completion status,[^4] allowing you to track the progress of your documentation.
 
 4. Click on any section of the documentation to review the test results and drafts of test result summaries generated by the {{< var validmind.developer >}}.
 
-   In any subsection, expand the **{{< var vm.product >}} Insights™** panel to view the Documentation Guidelines[^7] that tell you more about what these sections mean and help you with the task of documenting the model as a developer.
+   In any subsection, expand the **{{< var vm.product >}} Insights™** panel to view the Documentation Guidelines[^5] that tell you more about what these sections mean and help you with the task of documenting the model as a developer.
+
+5. Refine your model documentation by:
+
+   - Adding or editing content blocks[^6]
+   - Adding additional test results after you've logged them[^7]
 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-40-ns .tc}
 
-![Example model details page with documentation outline](developer-model-details.png){width=90% fig-alt="A screenshot showing an example model details page with documentation outline" .screenshot group="documentation"}
+![Example model details page with documentation outline](developer-model-details.png){fig-alt="A screenshot showing an example model details page with documentation outline" .screenshot group="documentation"}
 
 :::
 
 ::: {.w-40-ns .tc}
 
-![Populated model documentation section with the **{{< var vm.product >}} Insights™** panel open](validmind-insights.png){width=90% fig-alt="A screenshot showing populated model documentation section with the ValidMind Insights™ panel open" .screenshot group="documentation"}
+![Populated model documentation section with the **{{< var vm.product >}} Insights™** panel open](validmind-insights.png){fig-alt="A screenshot showing populated model documentation section with the ValidMind Insights™ panel open" .screenshot group="documentation"}
 
 :::
 
 ::::
-
 
 ## What's next
 
@@ -118,16 +127,16 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model dev
 
 <!-- FOOTNOTES -->
 
-[^1]: [Register with {{< var vm.product >}}](/guide/configuration/register-with-validmind.qmd)
+[^1]: [Quickstart for model documentation](/notebooks/quickstart/quickstart_model_documentation.ipynb)
 
-[^2]: [Log in to {{< var vm.product >}}](/guide/configuration/log-in-to-validmind.qmd)
+[^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^3]: [Quickstart for model documentation](/notebooks/quickstart/quickstart_model_documentation.ipynb)
+[^3]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
 
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^4]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
 
-[^5]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
+[^5]: [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
 
-[^6]: [Assign documentation section statuses](/guide/model-documentation/assign-documentation-section-statuses.qmd)
+[^6]: [Work with content blocks](/guide/model-documentation/work-with-content-blocks.qmd)
 
-[^7]: [View documentation guidelines](/guide/model-documentation/view-documentation-guidelines.qmd)
+[^7]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
