--- a/site/get-started/validator/quickstart-validator.qmd
+++ b/site/get-started/validator/quickstart-validator.qmd
@@ -168,7 +168,7 @@ Now that you've grasped the basics of using {{< var vm.product >}} for model val
 
 [^2]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^3]: [Working with documentation templates](/guide/templates/working-with-documentation-templates.qmd)
+[^3]: [Working with templates](/guide/templates/working-with-templates.qmd)
 
 [^4]: [Assess compliance](/guide/model-validation/assess-compliance.qmd#provide-compliance-assessments)
 
