Editing archive & delete models

--- a/site/guide/model-inventory/archive-delete-models.qmd
+++ b/site/guide/model-inventory/archive-delete-models.qmd
@@ -24,6 +24,12 @@ Archive models within the model inventory when they are decommissioned or delete
 
 ## Change model stage
 
+::: {.callout}
+##  Instead of manually modifying your models' stages,[^4] we recommend manipulating stages via customized workflows.[^5]
+
+Workflows increase oversight over the stage transitions of models by providing a more extensive audit history,[^6] and also allow you to wrap other organization policies into your transitions — such as inclusion of specific stakeholder approval.
+:::
+
 The model inventory within the {{< var validmind.platform >}} should reflect the state of models within your organization: 
 
 - If you decomission a model, you can archive it within the model inventory. 
@@ -33,7 +39,7 @@ To change a model's stage:
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
 
-2. Select a model or find your model by applying a filter or searching for it.[^4]
+2. Select a model or find your model by applying a filter or searching for it.[^7]
 
 3. Click on the [model stage]{.smallcaps} section.
 
@@ -46,9 +52,8 @@ To change a model's stage:
 2. Click **Save** to proceed with archival.
 
     Once you confirm, the model is flagged as archived in the model inventory.
-    
-- Once archived, you can then proceed with deleting your model if desired.[^5]
-- Models can also be reactivated to make them available for use again in the inventory.[^6]
+
+Archived models can be reactivated to make them available for use again in the inventory.[^8]
 
 #### Activate models
 
@@ -56,23 +61,21 @@ To change a model's stage:
 
 2. Click **Save** to proceed with activation.
 
-    Once you confirm, the model is set to active in the model inventory. 
+    Once you confirm, the model is set to active in the model inventory.
 
 ## Delete models
 
 If a model was created in error, or you otherwise no longer require a model to be tracked in the model inventory, you can delete it.
 
-::: {.callout-important title="Models must be inactive and archived before they can be deleted."}
-Model deletion is also permanent and cannot be undone.
+::: {.callout-important}
+## Model deletion is also permanent and cannot be undone.
 :::
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**. 
+1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^7]
+2. Select a model or find your model by applying a filter or searching for it.[^9]
 
-3. First, archive your model.[^8]
-
-4. Then, under the [model stage]{.smallcaps} section, select **Deleted**.
+3. Under the [model stage]{.smallcaps} section, select **Deleted**.
 
     Once you confirm deletion, the model is removed from the model inventory.
 
@@ -85,12 +88,14 @@ Model deletion is also permanent and cannot be undone.
 
 [^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^4]: [Manage model stages](/guide/model-workflows/manage-model-stages.qmd)
 
-[^5]: [Delete models](#delete-models)
+[^5]: [Setting up model workflows](/guide/model-workflows/setting-up-model-workflows.qmd)
 
-[^6]: [Activate models](#activate-models)
+[^6]: [Working with model workflows](/guide/model-workflows/working-with-model-workflows.qmd)
 
 [^7]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^8]: [Archive models](#archive-models)
+[^8]: [Activate models](#activate-models)
+
+[^9]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
