--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -204,7 +204,7 @@ Select when you would like to [resume workflow:]{.smallcaps}
 
 Workflow states are statuses unique to a specific workflow, discrete from model stages.[^24]
 
-### Add workflow states
+#### Add workflow states
 
 Add workflow states by either while configuring a **{{< fa wifi >}} Workflow State Change** step,[^25] or via the **{{< fa gear >}} Settings** page:
 
@@ -215,7 +215,7 @@ Add workflow states by either while configuring a **{{< fa wifi >}} Workflow Sta
 5. Enter in a **[name]{.smallcaps}** and a **[description]{.smallcaps}**, then select a **[color]{.smallcaps}** for your workflow state.
 6. Click **Save** to create the workflow state.
 
-### Delete workflow states
+#### Delete workflow states
 
 ::: {.callout-important title="Workflow state deletion is permanent."}
 If a state is or was previously in use  on a workflow within a {{< fa wifi >}} Workflow State Change step, the state cannot be deleted.
