Proofreading setting up

--- a/site/guide/model-workflows/_link-workflow-together.qmd
+++ b/site/guide/model-workflows/_link-workflow-together.qmd
@@ -2,7 +2,7 @@
 
 ::: {.panel-tabset}
 
-#### Start the workflow
+#### a. Start the workflow
 
 To initiate the beginning of your workflow:^[After you’ve [configured your workflow steps](/guide/model-workflows/configure-model-workflows.qmd#configure-workflow-steps), you can then link your workflow together.]
 
@@ -12,20 +12,16 @@ To initiate the beginning of your workflow:^[After you’ve [configured your wor
 
 1. Continue with linking the rest your steps together.
 
-#### Link steps together
+#### b. Link steps together
+
+To link subsequent steps together:
+
+- Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
+- You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
 ::: {.callout}
 Hover over a workflow step to view an animation of the steps connecting to and from that step.
 :::
-
-To link subsequent steps together:
-
-1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
-
-    You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
-
-1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End** step.
-
 
 ##### Link approval steps
 
@@ -43,7 +39,7 @@ To link subsequent steps together:
     a. Connect the left [**{{< fa circle >}}**]{.red} (red) to your rejection step.^[When complete, the workflow arrow will display as [Rejected]{.bubble .red .red-bg}.]
     b. Connect the right [**{{< fa circle >}}**]{.green} (green) to your approval step.^[When complete, the workflow arrow will display as [Approved]{.bubble .green .green-bg}.]
 
-#### End the workflow
+#### c. End the workflow
 
 When all your workflow steps have been linked together:
 
@@ -59,7 +55,7 @@ When all your workflow steps have been linked together:
 ::::
 
 :::: {.content-hidden unless-format="revealjs"}
-#### Start the workflow
+### 1. Start the workflow
 
 To initiate the beginning of your workflow:
 
@@ -69,19 +65,14 @@ To initiate the beginning of your workflow:
 
 1. Continue with linking the rest your steps together.
 
-#### Link steps together
+### 2. Link steps together
 
 To link subsequent steps together:
 
-1. Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
+- Click the **{{< fa circle >}}** below or to the right or left of the earlier step and drag it to connect to the top **{{< fa circle >}}** on the subsequent step.
+- You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
 
-    You're also able to link several different steps together at various points in the workflow, including stages that may circle back to previous steps.
-
-1. When you are finished linking your configured steps together, designate an **{{< fa circle-stop >}} End**  step.
-
-1. When you are finished configuring your workflow, click **Save Workflow** to apply your changes.
-
-#### End the workflow
+### 3. End the workflow
 
 When all your workflow steps have been linked together:
 
