--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -13,10 +13,10 @@ listing:
     - workflow-configuration-examples.qmd
 ---
 
-Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.
+Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.!
 
 - Models in your model inventory transition through your organization's custom model lifecycles via model stages, which are in turn manipulated via workflows.
-- Workflows are comprised of workflow steps,[^1] and have their own states discrete from model stages.[^2]
+- Workflows are comprised of workflow steps,[^1] and have their own workflow states[^2] discrete from model stages.
 - Some step types allow you to define conditional requirements,[^3] providing flexible customization.
 
 ## Set up workflows
@@ -85,7 +85,7 @@ Creates a button that performs an action on behalf of the user.
 When your workflow reaches the approval step, roles or users in the selected **[approval group]{.smallcaps}** will receive a preconfigured message.
 
 - Select from either **User Roles**, **Model Stakeholder Types**,or either **User Role** or **User Type** inventory field.[^10]
-- Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^11]example
+- Must be connected to both a rejection and approval {{< fa cube >}} Model Stage Change step.[^11]
 
 | Field | Description |
 |---:|---|
