--- a/site/guide/model-workflows/workflow-configuration-examples.qmd
+++ b/site/guide/model-workflows/workflow-configuration-examples.qmd
@@ -30,7 +30,7 @@ This workflow is initiated manually[^4] — in this case via {{< fa arrow-right-
 
 - In this workflow, the model stage[^5] remains as [In Initial Validation]{.bubble} throughout, while the state of the workflow[^6] transitions to reflect the status of validation.
 - The option to develop potential challenger models is at the discretion of the validator, or they can choose to approve the champion model without submitting additional challengers.
-- Depending on whether or not the model is a GenAI model, the validation report is also submitted for additional review to the organization's legal team before approval.
+- Depending on whether or not the model is a GenAI model,[^7] the validation report is also submitted for additional review to the organization's legal team before approval.
 
 ::: {.tc}
 ![Example model validation cycle workflow](example_model-validation-workflow.png){fig-alt="A screenshot showing an example model validation cycle workflow" .screenshot group="model-validation"}
@@ -38,10 +38,10 @@ This workflow is initiated manually[^4] — in this case via {{< fa arrow-right-
 
 ### On model deployment
 
-This workflow is initiated when a field is populated — in this case, when the model is slated for deployment by entering value into the [deployment scheduled]{.smallcaps} datetime field.[^7]
+This workflow is initiated when a field is populated — in this case, when the model is slated for deployment by entering value into the [deployment scheduled]{.smallcaps} datetime field.[^8]
 
 - The workflow will wait until the timestamp indicated in the scheduled deployment date before revealing the next available action in the workflow — in this case, the option to deploy the model and enter in a concrete date the model was initially pushed to production.
-- Actions on this workflow are linked both to a transition in model stage,[^8] as well as workflow state.[^9]
+- Actions on this workflow are linked both to a transition in model stage,[^9] as well as workflow state.[^10]
 
 ::: {.tc}
 ![Example model deployment cycle workflow](example_model-deployment-workflow.png){fig-alt="A screenshot showing an example model deployment cycle workflow" .screenshot group="model-deployment"}
@@ -53,7 +53,7 @@ This workflow is initiated when a field is populated — in this case, when the 
 
 #### {{< fa cube >}} Model Stage Change
 
-In this example, the model transitions into a stage[^10] called [In Documentation]{.bubble}:
+In this example, the model transitions into a stage[^11] called [In Documentation]{.bubble}:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -74,7 +74,7 @@ In this example, the model transitions into a stage[^10] called [In Documentatio
 
 #### {{< fa wifi >}} Workflow State Change
 
-In this example, the workflow transitions into a state[^11] called [Model In Development]{.bubble} and progresses the workflow completion to 25%:
+In this example, the workflow transitions into a state[^12] called [Model In Development]{.bubble} and progresses the workflow completion to 25%:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -93,7 +93,7 @@ In this example, the workflow transitions into a state[^11] called [Model In Dev
 
 #### {{< fa arrow-pointer >}} User Action v2
 
-In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [modelExport]{.bubble} attachment type field.[^12]
+In this example, the user is presented with an action button labelled **{{< fa arrow-right >}} Submit Documentation For Review** that requires them to include a model export in a [model export]{.smallcaps} attachment type field.[^13]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -106,15 +106,15 @@ In this example, the user is presented with an action button labelled **{{< fa a
 
 ![Example {{< fa arrow-pointer >}} User Action v2 step](example_user-action.png){fig-alt="A screenshot showing an example User Action v2 step" .screenshot group="user-action"}
 
-![Example {{< fa arrow-pointer >}} User Action v2 button](example_user-action-button.png){fig-alt="A screenshot showing an example User Action v2 button" .screenshot group="user-action"}
-
 :::
 
 ::::
 
+![Example {{< fa arrow-pointer >}} User Action v2 submission panel](example_user-action-submit.png){fig-alt="A screenshot showing an example User Action v2 submission panel" width=90% .screenshot group="user-action"}
+
 #### {{< fa users >}} Approval
 
-In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assigned to the model are presented with an approval message:
+In this example, the [peer reviewers]{.smallcaps} model stakeholders[^14] assigned to the model are presented with an approval message:
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -135,7 +135,7 @@ In this example, the [peer reviewers]{.smallcaps} model stakeholders[^13] assign
 
 #### {{< fa maximize >}} Condition Branch
 
-In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^14] approval process:[^15]
+In this example, models where the field [genai model]{.smallcaps} is set to true undergo a special [legal review]{.smallcaps} model stakeholder[^15] approval process:[^16]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -154,7 +154,7 @@ In this example, models where the field [genai model]{.smallcaps} is set to true
 
 #### {{< fa clock >}} Wait
 
-In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} datetime field:[^16]
+In this example, the next step on the workflow waits until the timestamp indicated in a [deployment scheduled]{.smallcaps} datetime field:[^17]
 
 :::: {.flex .flex-wrap .justify-around}
 
@@ -222,7 +222,7 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^2]: [Manage model stages](manage-model-stages.qmd)
 
-[^3]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+[^3]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-states)
 
 [^4]: ![Adding a workflow that initiates on model validation](example_model-validation.png){fig-alt="A screenshot showing the modal for adding a workflow that initiates on model validation" .screenshot group="model-validation"}
 
@@ -236,9 +236,11 @@ In this example, the workflow is designated to stop after running an additional 
 
 [^5]: [Manage model stages](manage-model-stages.qmd)
 
-[^6]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+[^6]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-states)
 
-[^7]: ![Adding a workflow that is initiated when a model has a scheduled deployment date](example_model-deployment.png){fig-alt="A screenshot showing the modal for adding a workflow that is initiated when a model has a scheduled deployment date" .screenshot group="model-deployment"}
+[^7]: [Setting up model workflows](setting-up-model-workflows.qmd#conditional-requirements)
+
+[^8]: ![Adding a workflow that is initiated when a model has a scheduled deployment date](example_model-deployment.png){fig-alt="A screenshot showing the modal for adding a workflow that is initiated when a model has a scheduled deployment date" .screenshot group="model-deployment"}
 
     **Workflow steps used:**
 
@@ -247,20 +249,20 @@ In this example, the workflow is designated to stop after running an additional 
     - [{{< fa wifi >}} Workflow State Change](#workflow-state-change)
     - [{{< fa clock >}} Wait](#wait)
 
-[^8]: [Manage model stages](manage-model-stages.qmd)
+[^9]: [Manage model stages](manage-model-stages.qmd)
 
-[^9]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+[^10]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-states)
 
-[^10]: [Manage model stages](manage-model-stages.qmd)
+[^11]: [Manage model stages](manage-model-stages.qmd)
 
-[^11]: [Setting up workflows](setting-up-model-workflows.qmd#workflow-states)
+[^12]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-states)
 
-[^12]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
-
-[^13]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
+[^13]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd#inventory-field-types)
 
 [^14]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^15]: [{{< fa users >}} Approval](#approval)
+[^15]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^16]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+[^16]: [{{< fa users >}} Approval](#approval)
+
+[^17]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
