Casing edits that I will apply to frontend

--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -163,8 +163,8 @@ Configure conditional requirements for the following step types:[^19]
 1. Under **[when these conditions are met]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
 
-    - Click **{{< fa plus >}} Add rule** to add an independent rule.
-    - Click **{{< fa plus-minus >}} Add group** to add a linked group of rules that all must be true to qualify.
+    - Click **{{< fa plus >}} Add Rule** to add an independent rule.
+    - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
 #### {{< fa arrow-pointer >}} User Action v2
 
@@ -173,8 +173,8 @@ Configure conditional requirements for the following step types:[^19]
 1. Under **[display action button when]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
 
-    - Click **{{< fa plus >}} Add rule** to add an independent rule.
-    - Click **{{< fa plus-minus >}} Add group** to add a linked group of rules that all must be true to qualify.
+    - Click **{{< fa plus >}} Add Rule** to add an independent rule.
+    - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
 #### {{< fa users >}} Approval
 
@@ -187,8 +187,8 @@ Configure conditional requirements for the following step types:[^19]
 1. Under each branch's **[conditions]{.smallcaps}**, set your `AND` and `OR` conditions.
 2. Add a single independent rule or a linked condition group. These rules and groups can be nested if desired:
 
-    - Click **{{< fa plus >}} Add rule** to add an independent rule.
-    - Click **{{< fa plus-minus >}} Add group** to add a linked group of rules that all must be true to qualify.
+    - Click **{{< fa plus >}} Add Rule** to add an independent rule.
+    - Click **{{< fa plus-minus >}} Add Group** to add a linked group of rules that all must be true to qualify.
 
 #### {{< fa clock >}} Wait
 
