--- a/site/guide/model-workflows/manage-model-workflows.qmd
+++ b/site/guide/model-workflows/manage-model-workflows.qmd
@@ -34,9 +34,9 @@ To manually start a workflow[^4] for a specific model:
 
 3. On the landing page of your model, locate the [active workflows]{.smallcaps} section.
 
-4. Click **{{< fa arrow-right-arrow-left >}} See all workflows**.
+4. Click **{{< fa arrow-right-arrow-left >}} See All Workflows**.
 
-5. Select **{{< fa arrow-right >}} Run workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
+5. Select **{{< fa arrow-right >}} Run Workflow** for the workflow you'd like to initiate, then select your desired **[workflow start]{.smallcaps}** option:
 
     - **Run Now** — Workflow starts instantly.
     - **Scheduled Run** — Set a future date to run the workflow.
@@ -62,7 +62,7 @@ To remove a workflow from a model:
 
 5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
 
-6. On the confirmation page, leave **[restart workflow after aborting.]{.smallcaps}** untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
+6. On the confirmation page, leave **[restart workflow after aborting]{.smallcaps}** untoggled, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to abort your workflow.
 
 
 <!-- FOOTNOTES -->
