--- a/site/guide/model-workflows/transition-model-workflows.qmd
+++ b/site/guide/model-workflows/transition-model-workflows.qmd
@@ -40,7 +40,7 @@ If you need to reset a model's workflow to the beginning:
 
 5. On the workflow's detail modal, click on the **{{< fa ellipsis-vertical >}}** in the top-right hand corner and select **{{< fa ban >}} Abort Workflow**.
 
-6. On the confirmation page, toggle **[restart workflow after aborting.]{.smallcaps}**, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
+6. On the confirmation page, toggle **[restart workflow after aborting]{.smallcaps}**, then click **{{< fa arrow-right >}} Yes, Abort Workflow** to restart your workflow.
 
 
 <!-- FOOTNOTES -->
