--- a/site/guide/model-workflows/setting-up-model-workflows.qmd
+++ b/site/guide/model-workflows/setting-up-model-workflows.qmd
@@ -13,7 +13,7 @@ listing:
     - workflow-configuration-examples.qmd
 ---
 
-Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.!
+Configure workflows to match your organizational needs for overseeing model development, validation, implementation, ongoing monitoring, auditing, or other risk management activities.
 
 - Models in your model inventory transition through your organization's custom model lifecycles via model stages, which are in turn manipulated via workflows.
 - Workflows are comprised of workflow steps,[^1] and have their own workflow states[^2] discrete from model stages.
